# app/Http/Resources/CampaignResource.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Resources;
+
+use App\Models\Campaign;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/**
+ * @mixin Campaign
+ */
+class CampaignResource extends JsonResource
+{
+    /**
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'body' => $this->body,
+            'recipients_count' => $this->recipients_count,
+            'sent_at' => $this->sent_at?->toIso8601ZuluString(),
+        ];
+    }
+}
